change sql config
